examples/base/mesh-dj/dj-app-mesh-metal-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metal-v1
  namespace: ${ks_namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metal
      version: v1
  template:
    metadata:
      labels:
        app: metal
        version: v1
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: metal
          image: "672518094988.dkr.ecr.us-west-2.amazonaws.com/hello-world:v1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: metal-v1
  namespace: ${ks_namespace}
  labels:
    app: metal
    version: v1
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: metal
    version: v1
