examples/base/mesh-dj/dj-app-mesh-rock-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rock-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rock
      version: v1
  template:
    metadata:
      labels:
        app: rock
        version: v1
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: rock
          image: "672518094988.dkr.ecr.us-west-2.amazonaws.com/hello-world:v1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: rock-v1
  namespace: default
  labels:
    app: rock
    version: v1
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: rock
    version: v1
