examples/base/mesh-dj/dj-app-mesh-service.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: jazz
  namespace: default
spec:
  awsName: jazz.default.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: jazz-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: metal
  namespace: default
spec:
  awsName: metal.default.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: metal-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: rock
  namespace: default
spec:
  awsName: rock.default.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: rock-router
---
apiVersion: v1
kind: Service
metadata:
  name: jazz
  namespace: default
  labels:
    app: jazz
spec:
  ports:
    - port: 9080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: metal
  namespace: default
  labels:
    app: metal
spec:
  ports:
    - port: 9080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: rock
  namespace: default
  labels:
    app: rock
spec:
  ports:
    - port: 9080
      name: rock
---
